--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ header, footer {
   font-size:1.5rem;
 }
 
-.nav, ul {
+nav ul {
   font-family:sans-serif;
 }
 .logo {
@@ -15,7 +15,11 @@ header, footer {
 .wrapper {
   background-color: #eee8d5;
 }
-7. missing
+
+wrapper > .dfn {
+  background-colour: #b58900;
+}
+
 #contents, #favs, #facts, #types {
   color: #93a1a1
 }
