--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,14 @@ h2 + .dfn + strong {
   color: #fff;
 }
 
+a:not(.no-highlight) {
+  background-color: #719e07;
+}
+
+a:[rel="external"] {
+  background-color: #2694d8;
+}
+
 ol li:first-child {
   color: #719e47;
 }
@@ -42,4 +50,8 @@ ol li:last-child {
 
 .types li:nth-child(even) {
   background-color: #586e75;
+}
+
+.types li:nth-child(3) {
+  background-color: #d04b16;
 }
