--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ a:not(.no-highlight) {
   background-color: #719e07;
 }
 
-a rel="external" {
+a [rel="external"] {
   background-color: #2694d8;
 }
 
