--- a/css/main.css
+++ b/css/main.css
@@ -9,9 +9,11 @@ header, footer {
 nav ul {
   font-family: sans-serif;
 }
+
 .logo {
   text-transform: uppercase;
 }
+
 .wrapper {
   background-color: #eee8d5;
 }
@@ -20,7 +22,7 @@ nav ul {
   color: #93a1a1;
 }
 
-wrapper > .dfn {
+.wrapper > .dfn {
   background-color: #b58900;
 }
 
